Re-fix horizontal scroll bar

--- a/themes/ek2012/less/ek.less
+++ b/themes/ek2012/less/ek.less
@@ -122,7 +122,7 @@ h5 {
 
 .ek-social {
 	font-size: 0px;
-/* 	overflow: hidden; */
+	overflow: hidden; // this is because of the text indent
 	li {
 		font-size: @baseFontSize;
 		display: inline-block;
